--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,10 @@ body{
     width: 120px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     background: rgba(255, 255, 255, 1);
     border-radius: 20px;
-    padding: 60px 0 60px 0;
     border:5px solid white;
     box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
 }
@@ -84,6 +84,7 @@ body{
     background-color: rgba(218, 198, 182, 0);
     border: none;
     cursor: pointer;
+    width: 120px;
 }
 .noActive img {
     display: none;
@@ -93,19 +94,23 @@ body{
     background-color: rgba(218, 198, 182, 1);
     border-radius: 20px;
     border: 1px solid black;
-    padding: 10px 0 10px 0;
+    padding: 10px;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80px;
     gap: 5px
+}
+.active {
+    width: 100px;
+    height: 80px;
 }
 .active img {
     display: flex;
     width: 30px;
 }
+
 
 
 h3{
@@ -119,6 +124,10 @@ p{
 h2 {
     font-size:20px;
     width: 400;
+}
+.options h2 {
+    font-size:40px;
+    width: 800;
 }
 h1 {
     font-size:45px;
@@ -183,9 +192,10 @@ a {
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:flex-start;
     align-items: start;
     flex-wrap: wrap;
+    gap: 30px;
     width: 100%;
 }
 
@@ -280,18 +290,17 @@ a {
 }
 
 .coffeeImg {
-    height: 100vh;
+    height: 75vh;
     width: auto;
     position:absolute;
-    top: 0;
+    top: 19%;
     left: 0;
-    display: none;
 }
 
 .shadow {
-    height: 77vh;
+    height: 79vh;
     width: auto;
-    top: 17vh;
+    top: 19vh;
     left: -10px;
 }
 
@@ -350,7 +359,7 @@ a {
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
 }
 
 .noChosen {
@@ -366,7 +375,6 @@ a {
     gap: 10px;
     box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.2);
 }
-.chosen {   width: 80px;    }
 
 .short, .tall, .grand, .venti {
     width: 80px;
@@ -396,8 +404,53 @@ a {
     border: 0;
     border-radius: 25px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .placeOrd:hover {
     background-color: rgb(202, 80, 55);
 }
+
+.upDown {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 15px 0 15px 0;
+    width: 50px;
+    cursor: pointer;
+}
+.upDown:hover, .plusMin:hover {
+    background-color: rgba(92, 92, 92, 0.1);
+}
+.upDown img{
+    width: 15px;
+}
+
+.coffeeCost {
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    padding: 5px;
+    width: 100px;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.2);
+    font-size: 20px;
+}
+.plusMin {
+    background: none;
+    border: none;
+    cursor: pointer;
+    border-radius: 30px;
+    color: rgba(102, 80, 80, 1);
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+}
+
